import React from 'react';
import { shallow } from 'enzyme';
import { ExpensesSummary } from './../../components/ExpensesSummary'

test('should render ExpensesSummary with 1 expense', () => {
    const wrapper = shallow(<ExpensesSummary count={1} total={100} />);
    expect(wrapper).toMatchSnapshot(); 
});

test('should render ExpensesSummary with multiple expenses', () => {
    const wrapper = shallow(<ExpensesSummary count={23} total={100032423} />);
    expect(wrapper).toMatchSnapshot();
});